--- a/rest/package.json
+++ b/rest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment1",
+  "name": "assignment2",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "csv-writer": "^1.6.0",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
